[project]
name = "reflexion-agent"
version = "0.1.0"
description = ""
authors = [
    {name = "deepak",email = "deepakjayakumar11@gmail.com"}
]
requires-python = ">=3.14,<4.0.0"
dependencies = [
    "python-dotenv (>=1.2.2,<2.0.0)",
    "black (>=26.5.1,<27.0.0)",
    "isort (>=8.0.1,<9.0.0)",
    "langchain (>=1.3.11,<2.0.0)",
    "langgraph (>=1.2.6,<2.0.0)",
    "langchain-google-genai (>=4.2.5,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
